# WebpulseForecast_Native

web_analysis/: CMakeLists.txt  com_gdme_plugins_webpulseforecast_WebPulseForecastNative.c  com_gdme_plugins_webpulseforecast_WebPulseForecastNative.h  main.c  tinydir.h  web_parsers.c  web_parsers.h  web_resource_analyzer.c  web_resource_analyzer.h
